改了很多， 你看看

--- a/index.html
+++ b/index.html
@@ -1,8 +1,29 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
+<style>
+h1 {
+      width:450px;
+      margin: auto;
+      border: 5px solid #4d79ff ;
+      font-family: AVENIR;
+      text-size: 55px;
+}
+h2 {
+      text-align: center;
+      margin:inherit;
+      font-family: Herculanum;
+      size: 55px;
+}
+body {
+      color: black
+}
+</style>
+</head>
 
-<h1>My First Heading</h1>
+<body>
+<h1>FCS TECHNOLOGY CENTER</h1>
+<h2>Fresno Christian School</h2>
 
 </body>
 </html>
