--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@ h1 {
       margin: auto;
       border: 5px solid #4d79ff ;
       font-family: AVENIR;
-      text-size: 55px;
+      font-size: 33px;
 }
 h2 {
       text-align: center;
       margin:inherit;
       font-family: Herculanum;
-      size: 55px;
+      font-size: 22px;
 }
 body {
       color: black
@@ -23,7 +23,7 @@ body {
 
 <body>
 <h1>FCS TECHNOLOGY CENTER</h1>
-<h2>Fresno Christian School</h2>
+<h2>F  r  e  s  n  o  .  C  h  r  i  s  t  i  a  n  .  S  c  h  o  o  l</h2>
 
 </body>
 </html>
